--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,62 +1,59 @@
 +++
-title = "Goldydocs"
-linkTitle = "Goldydocs"
+title = "Rosely"
+linkTitle = "Rosely"
 
 +++
 
-{{< blocks/cover title="Welcome to Goldydocs: A Docsy Example Project!" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="Rosely: A Colour Palette and Design System" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
-	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
-		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "docs/Getting started" >}}">
+		Get Started <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
-	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/google/docsy-example">
-		Download <i class="fab fa-github ml-2 "></i>
+	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "docs" >}}">
+		Documentation <i class="fab fa-readme ml-2 "></i>
 	</a>
-	<p class="lead mt-5">Porridge temperature assessment - in the cloud!</p>
-	{{< blocks/link-down color="info" >}}
+	<p class="lead mt-5">
+		<img src="design-components.png" class="img-rounded" alt="Cinque Terre" style="float:left;height:200px;">
+		Rosely is a simple and uncluttered design system based on the warm and embracing gentle colour of rose quartz crystals,
+		complemented by a fresh and positive colour palette that symbolises adventuresome exploration of newness and originality.
+		It can be used for a brand style, website, user interface or application theme.
+	</p>
+	{{< blocks/link-down color="light" >}}
 </div>
 {{< /blocks/cover >}}
 
 
-{{% blocks/lead color="primary" %}}
-Goldydocs provides a single web UI providing visibility into porridge temperature, chair size, and bed softness metrics! You can even find out who's been eating **your** porridge.
+{{% blocks/lead color="dark" %}}
+If ever there was a time when we needed to surround ourselves with colours that infuse feelings of calmness and positivity into our environment,
+it is now. As we continue down this path of uncertainty, a time marked by a global pandemic and social distancing coupled with social unrest
+demanding action on equality and sustainability, people seek mindfulness and well-being as an antidote to the stress of modern day lives.
 
-(Sadly, Goldydocs isn't a real project, but you can use this site as an example to create your own real websites with [Docsy](http://docsy.dev))
+Rosely has a base colour that psychologicallys fulfil a yearning for reassurance and security.
+Additional colours symbolises the brighter future that lies ahead that expresses a sense of playful freshness and optimism that brings a
+smile to our face as it takes us forward.
+
+
 {{% /blocks/lead %}}
 
-{{< blocks/section color="dark" >}}
-{{% blocks/feature icon="fa-lightbulb" title="New chair metrics!" %}}
-The Goldydocs UI now shows chair size metrics by default.
+{{< blocks/section color="light" >}}
 
-Please follow this space for updates!
+{{% blocks/feature icon="fas fa-magic" title="Clean and uncluttered" %}}
+to achieve a optimal focus and readability
 {{% /blocks/feature %}}
 
-
-{{% blocks/feature icon="fab fa-github" title="Contributions welcome!" url="https://github.com/google/docsy-example" %}}
-We do a [Pull Request](https://github.com/google/docsy-example/pulls) contributions workflow on **GitHub**. New users are always welcome!
+{{% blocks/feature icon="fas fa-object-ungroup" title="Modular structure" %}}
+inspired by Nord, colours are numbered from `rosely0` to `rosely15` in logical groups
 {{% /blocks/feature %}}
 
-
-{{% blocks/feature icon="fab fa-twitter" title="Follow us on Twitter!" url="https://twitter.com/docsydocs" %}}
-For announcement of latest features etc.
+{{% blocks/feature icon="fas fa-palette" title="Beautiful and harmonic color contrasts" %}}
+a warm and embracing gentle rose tone that conveys compassion and a sense of composure, together with a fresh and positive colour palette
 {{% /blocks/feature %}}
-
 
 {{< /blocks/section >}}
 
-
 {{< blocks/section >}}
-<div class="col">
-<h1 class="text-center">This is the second Section</h1>
-</div>
-
-{{< /blocks/section >}}
-
-
-
-{{< blocks/section >}}
-{{% blocks/feature icon="fab fa-app-store-ios" title="Download **from AppStore**" %}}
-Get the Goldydocs app!
+{{% blocks/feature icon="fab fa-github" title="Open Source" %}}
+All our assets are published on GitHub
 {{% /blocks/feature %}}
 
 
@@ -69,13 +66,5 @@ We do a [Pull Request](https://github.com/google/docsy-example/pulls) contributi
 For announcement of latest features etc.
 {{% /blocks/feature %}}
 
-
-{{< /blocks/section >}}
-
-{{< blocks/section >}}
-
-<div class="col-12">
-<h1 class="text-center">This is another Section</h1>
-</div>
 
 {{< /blocks/section >}}
