--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -36,3 +36,5 @@ Goldydocs is a sample site using the <a href="https://github.com/google/docsy">D
 </div>
 
 {{< /blocks/section >}}
+
+Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
