--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -4,23 +4,29 @@ linkTitle = "Rosely"
 
 +++
 
-{{< blocks/cover title="Rosely: A Colour Palette and Design System" image_anchor="top" height="full" color="orange" >}}
+{{< rosely title="Rosely: A Colour Palette and Design System" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
-	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "docs/Getting started" >}}">
-		Get Started <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "themes" >}}">
+		Themes <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "docs" >}}">
 		Documentation <i class="fab fa-readme ml-2 "></i>
 	</a>
-	<p class="lead mt-5">
-		<img src="design-components.png" class="img-rounded" alt="Cinque Terre" style="float:left;height:200px;">
-		Rosely is a simple and uncluttered design system based on the warm and embracing gentle colour of rose quartz crystals,
-		complemented by a fresh and positive colour palette that symbolises adventuresome exploration of newness and originality.
-		It can be used for a brand style, website, user interface or application theme.
-	</p>
+	<div class="row mt-5">
+		<div class="col-sm-4">		
+			<img src="design-components.svg" alt="Design" width="100%">
+		</div>
+		<div class="col-sm-8">
+			<p class="lead">
+				Rosely is a simple and uncluttered design system based on the warm and embracing gentle colour of rose quartz crystals,
+				complemented by a fresh and positive colour palette that symbolises adventuresome exploration of newness and originality.
+				It can be used for a brand style, website, user interface or application theme.
+			</p>
+		</div>
+	</div>
 	{{< blocks/link-down color="light" >}}
 </div>
-{{< /blocks/cover >}}
+{{< /rosely >}}
 
 
 {{% blocks/lead color="dark" %}}
@@ -38,7 +44,7 @@ smile to our face as it takes us forward.
 {{< blocks/section color="light" >}}
 
 {{% blocks/feature icon="fas fa-magic" title="Clean and uncluttered" %}}
-to achieve a optimal focus and readability
+to achieve optimal focus and readability
 {{% /blocks/feature %}}
 
 {{% blocks/feature icon="fas fa-object-ungroup" title="Modular structure" %}}
