Cleaned up config, package and updated terminal

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -4,7 +4,7 @@ linkTitle = "Rosely"
 
 +++
 
-{{< rosely title="Rosely: A Colour Palette and Design System" image_anchor="top" height="full" color="orange" >}}
+{{< rosely title="Rosely: A Colour Palette and Design System" image_anchor="top" height="full" color="rosely5" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "themes" >}}">
 		Themes <i class="fas fa-arrow-alt-circle-right ml-2"></i>
@@ -24,12 +24,12 @@ linkTitle = "Rosely"
 			</p>
 		</div>
 	</div>
-	{{< blocks/link-down color="light" >}}
+	{{< blocks/link-down color="rosely10" >}}
 </div>
 {{< /rosely >}}
 
 
-{{% blocks/lead color="dark" %}}
+{{% blocks/lead %}}
 If ever there was a time when we needed to surround ourselves with colours that infuse feelings of calmness and positivity into our environment,
 it is now. As we continue down this path of uncertainty, a time marked by a global pandemic and social distancing coupled with social unrest
 demanding action on equality and sustainability, people seek mindfulness and well-being as an antidote to the stress of modern day lives.
@@ -41,14 +41,14 @@ smile to our face as it takes us forward.
 
 {{% /blocks/lead %}}
 
-{{< blocks/section color="light" >}}
+{{< blocks/section >}}
 
 {{% blocks/feature icon="fas fa-magic" title="Clean and uncluttered" %}}
 to achieve optimal focus and readability
 {{% /blocks/feature %}}
 
 {{% blocks/feature icon="fas fa-object-ungroup" title="Modular structure" %}}
-inspired by Nord, colours are numbered from `rosely0` to `rosely15` in logical groups
+inspired by `Nord` and `Base16`, colours are numbered from `rosely0` to `rosely15` in logical groups
 {{% /blocks/feature %}}
 
 {{% blocks/feature icon="fas fa-palette" title="Beautiful and harmonic color contrasts" %}}
@@ -63,12 +63,12 @@ All our assets are published on GitHub
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-github" title="Contributions welcome!" url="https://github.com/google/docsy-example" %}}
-We do a [Pull Request](https://github.com/google/docsy-example/pulls) contributions workflow on **GitHub**. New users are always welcome!
+{{% blocks/feature icon="fab fa-github" title="Contributions welcome!" url="https://github.com/hellotham/rosely-docs" %}}
+We do a [Pull Request](https://github.com/hellotham/rosely-docs/pulls) contributions workflow on **GitHub**. New users are always welcome!
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-twitter" title="Follow us on Twitter!" url="https://twitter.com/GoHugoIO" %}}
+{{% blocks/feature icon="fab fa-twitter" title="Follow us on Twitter!" url="https://twitter.com/hellothamcom" %}}
 For announcement of latest features etc.
 {{% /blocks/feature %}}
 
