New colour system and drawings

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -14,11 +14,11 @@ linkTitle = "Rosely"
 	</a>
 	<div class="row mt-5">
 		<div class="col-sm-4">		
-			<img src="design-components.svg" alt="Design" width="100%">
+			<img src="/drawings/design-components.svg" alt="Design" width="100%">
 		</div>
 		<div class="col-sm-8">
 			<p class="lead">
-				Rosely is a simple and uncluttered design system based on the warm and embracing gentle colour of rose quartz crystals,
+				Rosely is a simple and uncluttered design system based on millennial pinks and purples,
 				complemented by a fresh and positive colour palette that symbolises adventuresome exploration of newness and originality.
 				It can be used for a brand style, website, user interface or application theme.
 			</p>
@@ -48,11 +48,11 @@ to achieve optimal focus and readability
 {{% /blocks/feature %}}
 
 {{% blocks/feature icon="fas fa-object-ungroup" title="Modular structure" %}}
-inspired by `Nord` and `Base16`, colours are numbered from `rosely0` to `rosely15` in logical groups
+inspired by `Nord` and `Base16`, colours are numbered from `rosely0` to `roselyF`
 {{% /blocks/feature %}}
 
 {{% blocks/feature icon="fas fa-palette" title="Beautiful and harmonic color contrasts" %}}
-a warm and embracing gentle rose tone that conveys compassion and a sense of composure, together with a fresh and positive colour palette
+four complementary sub-palettes provide a small but useful range of greys, pinks, purples and positive colours
 {{% /blocks/feature %}}
 
 {{< /blocks/section >}}
